refactor(security): harden security config, env separation and startup validation