@@ -1,124 +1,128 @@
 package br.com.concurseiro.api.infra.config;
 
 import br.com.concurseiro.api.infra.security.JwtAuthFilter;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.ProblemDetail;
+import org.springframework.http.MediaType;
 import org.springframework.security.config.Customizer;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.web.AuthenticationEntryPoint;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.web.cors.*;
-
-import br.com.concurseiro.api.usuarios.model.Usuario;
+import org.springframework.security.web.access.AccessDeniedHandler;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.net.URI;
 import java.util.Arrays;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Configuration
+@EnableMethodSecurity
 public class SecurityConfig {
 
     private final JwtAuthFilter jwtAuthFilter;
-    private final br.com.concurseiro.api.infra.security.RateLimitFilter rateLimitFilter;
+    private final ObjectMapper objectMapper;
 
     @Value("${cors.allowed-origins}")
-    private String corsAllowedOrigins;
+    private String allowedOrigins;
 
-    public SecurityConfig(JwtAuthFilter jwtAuthFilter, br.com.concurseiro.api.infra.security.RateLimitFilter rateLimitFilter) {
+    public SecurityConfig(JwtAuthFilter jwtAuthFilter, ObjectMapper objectMapper) {
         this.jwtAuthFilter = jwtAuthFilter;
-        this.rateLimitFilter = rateLimitFilter;
+        this.objectMapper = objectMapper;
     }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         return http
+                .csrf(AbstractHttpConfigurer::disable)
                 .cors(Customizer.withDefaults())
-                .csrf(csrf -> csrf.disable())
-                .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .sessionManagement(session ->
+                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .exceptionHandling(ex -> ex
-                    .authenticationEntryPoint((req, res, authEx) -> {
-                        res.setStatus(HttpStatus.UNAUTHORIZED.value());
-                        res.setContentType("application/problem+json");
-                        ProblemDetail pd = ProblemDetail.forStatus(HttpStatus.UNAUTHORIZED);
-                        pd.setTitle("Não autenticado");
-                        pd.setType(URI.create("https://concurseiro.dev/errors/auth"));
-                        pd.setInstance(URI.create(req.getRequestURI()));
-                        new com.fasterxml.jackson.databind.ObjectMapper().writeValue(res.getOutputStream(), pd);
-                    })
-                    .accessDeniedHandler((req, res, deniedEx) -> {
-                        res.setStatus(HttpStatus.FORBIDDEN.value());
-                        res.setContentType("application/problem+json");
-                        ProblemDetail pd = ProblemDetail.forStatus(HttpStatus.FORBIDDEN);
-                        pd.setTitle("Acesso negado");
-                        pd.setType(URI.create("https://concurseiro.dev/errors/forbidden"));
-                        pd.setInstance(URI.create(req.getRequestURI()));
-                        new com.fasterxml.jackson.databind.ObjectMapper().writeValue(res.getOutputStream(), pd);
-                    })
-                )
+                        .authenticationEntryPoint(authenticationEntryPoint())
+                        .accessDeniedHandler(accessDeniedHandler()))
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**").permitAll()
-                        .requestMatchers("/actuator/**").permitAll()
+                        .requestMatchers("/actuator/health", "/actuator/info").permitAll()
                         .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
-                        .requestMatchers("/api/v1/auth/**").permitAll()
-
-                        // leitura pública
-                        .requestMatchers(org.springframework.http.HttpMethod.GET, "/api/v1/questoes/**").permitAll()
-                        .requestMatchers(org.springframework.http.HttpMethod.GET, "/api/v1/catalogo/**").permitAll()
-                        .requestMatchers(org.springframework.http.HttpMethod.GET, "/api/v1/provas/**").permitAll()
-                        .requestMatchers(org.springframework.http.HttpMethod.GET, "/api/v1/questoes/*/comentarios").permitAll()
-
-                        // ações permitidas para qualquer usuário autenticado e ativo
-                        .requestMatchers(org.springframework.http.HttpMethod.POST, "/api/v1/questoes")
-                            .hasAnyAuthority(Usuario.Role.ADMIN.authority(), Usuario.Role.VISITANTE.authority())
-                        .requestMatchers(org.springframework.http.HttpMethod.POST, "/api/v1/questoes/*/comentarios")
-                            .hasAnyAuthority(Usuario.Role.ADMIN.authority(), Usuario.Role.VISITANTE.authority())
-                        .requestMatchers(org.springframework.http.HttpMethod.POST, "/api/v1/provas")
-                            .hasAnyAuthority(Usuario.Role.ADMIN.authority(), Usuario.Role.VISITANTE.authority())
-                        .requestMatchers(org.springframework.http.HttpMethod.POST, "/api/v1/provas/*/questoes")
-                            .hasAnyAuthority(Usuario.Role.ADMIN.authority(), Usuario.Role.VISITANTE.authority())
-                        .requestMatchers(org.springframework.http.HttpMethod.POST, "/api/v1/comentarios/*/curtir")
-                            .hasAnyAuthority(Usuario.Role.ADMIN.authority(), Usuario.Role.VISITANTE.authority())
-                        .requestMatchers(org.springframework.http.HttpMethod.POST, "/api/v1/comentarios/*/descurtir")
-                            .hasAnyAuthority(Usuario.Role.ADMIN.authority(), Usuario.Role.VISITANTE.authority())
-
-                        // ações exclusivas de admin
-                        .requestMatchers("/api/v1/admin/**").hasAuthority(Usuario.Role.ADMIN.authority())
-
+                        .requestMatchers(HttpMethod.POST, "/auth/**").permitAll()
                         .anyRequest().authenticated()
                 )
-                .addFilterBefore(rateLimitFilter, org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter.class)
-                .addFilterBefore(jwtAuthFilter, org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
                 .build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration cfg = new CorsConfiguration();
-
-        List<String> origins = Arrays.stream(corsAllowedOrigins.split(","))
+        List<String> origins = Arrays.stream(allowedOrigins.split(","))
                 .map(String::trim)
                 .filter(s -> !s.isBlank())
-                .toList();
+                .collect(Collectors.toList());
 
-        boolean isWildcard = origins.size() == 1 && origins.get(0).equals("*");
-
-        if (isWildcard) {
-            cfg.setAllowedOriginPatterns(List.of("*"));
-            cfg.setAllowCredentials(false);
-        } else {
-            cfg.setAllowedOrigins(origins);
-            cfg.setAllowCredentials(true);
+        if (origins.contains("*")) {
+            throw new IllegalStateException(
+                    "cors.allowed-origins não pode ser '*' fora de ambiente local"
+            );
         }
 
-        cfg.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        cfg.setAllowedHeaders(List.of("*"));
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOrigins(origins);
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With"));
+        config.setExposedHeaders(List.of("Location"));
+        config.setAllowCredentials(true);
+        config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", cfg);
+        source.registerCorsConfiguration("/**", config);
         return source;
+    }
+
+    @Bean
+    public AuthenticationEntryPoint authenticationEntryPoint() {
+        return (request, response, ex) -> {
+            response.setStatus(HttpStatus.UNAUTHORIZED.value());
+            response.setContentType(MediaType.APPLICATION_PROBLEM_JSON_VALUE);
+            response.setCharacterEncoding("UTF-8");
+
+            Map<String, Object> body = new LinkedHashMap<>();
+            body.put("type", URI.create("https://httpstatuses.com/401").toString());
+            body.put("title", "Unauthorized");
+            body.put("status", 401);
+            body.put("detail", "Autenticação necessária ou token inválido");
+            body.put("instance", request.getRequestURI());
+
+            objectMapper.writeValue(response.getWriter(), body);
+        };
+    }
+
+    @Bean
+    public AccessDeniedHandler accessDeniedHandler() {
+        return (request, response, ex) -> {
+            response.setStatus(HttpStatus.FORBIDDEN.value());
+            response.setContentType(MediaType.APPLICATION_PROBLEM_JSON_VALUE);
+            response.setCharacterEncoding("UTF-8");
+
+            Map<String, Object> body = new LinkedHashMap<>();
+            body.put("type", URI.create("https://httpstatuses.com/403").toString());
+            body.put("title", "Forbidden");
+            body.put("status", 403);
+            body.put("detail", "Você não tem permissão para acessar este recurso");
+            body.put("instance", request.getRequestURI());
+
+            objectMapper.writeValue(response.getWriter(), body);
+        };
     }
 
     @Bean
